--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
-/node_modules
-/build
+# /node_modules
+# /build
 
-dev.js
+# dev.js
 
 
 
-.DS_Store
+# .DS_Store
 
-npm-debug.log*
-yarn-debug.kog*
-yarn-error.log*
+# npm-debug.log*
+# yarn-debug.kog*
+# yarn-error.log*
 
-.vscode
+# .vscode
